--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,10 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
+
 
         <!-- 测试依赖 -->
         <dependency>
